--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 CHANGES
 =======
 
+* updated pytest args
+* updating changelog
 * add pytest-cov options
 * updated changelog
 * added some coverage tools
