--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,10 @@
 CHANGES
 =======
 
+* updated docs
+* updated metadata in setup.cfg
+* modified README
+* fixing docs build
 * added pbr for sphinx build
 * Support v1 api and other fixes (#3)
 * updated README
